jodit 增加高亮,行号,copy;spring增加缓存功能

--- a/src/main/resources/templates/front-template/articles.html
+++ b/src/main/resources/templates/front-template/articles.html
@@ -9,7 +9,6 @@
     <title>专题文章</title>
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/js/lib/prism/prism.css">
-    <script src="/js/lib/prism/prism.js"></script>
     <script src="/js/base.js"></script>
     <script src="/js/lib/flexsearch/flexsearch.bundle.min.js"></script>
     <link rel="stylesheet" href="/css/base.css"/>
@@ -18,7 +17,7 @@
 
 </head>
 
-<body>
+<body data-prismjs-copy-timeout="500">
 <div class="topDiv">
     <div class="topBar">
         <div class="logoDiv">
@@ -96,8 +95,14 @@
 <script type="text/javascript">
     loadNav();
 </script>
+<script src="/js/lib/prism/prism.js"></script>
 <script src="/js/articleTree.js"></script>
 <script type="module" src="/js/indexSearch.js"></script>
+<script>
+    if (!hasHighlighted) {
+        Prism.highlightAll(false);//高亮代码
+    }
+</script>
 </body>
 
 </html>
