--- a/src/main/resources/templates/front-template/index.html
+++ b/src/main/resources/templates/front-template/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name='description' content=''>
     <meta name='keywords' content=''>
-    <title>网站首页</title>
+    <title>朱海保的个人网站</title>
     <script src="/js/base.js"></script>
     <script src="/js/lib/flexsearch/flexsearch.bundle.min.js"></script>
     <link rel="icon" href="/favicon.ico">
