修复jodit copy 按钮失效;ename重名判断

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" th:href="@{/js/lib/jodit/plugins/paste-code/paste-code.css}">
-    <link rel="stylesheet" th:href="@{/js/lib/prism/prism.css}">
+    <!--    <link rel="stylesheet" th:href="@{/js/lib/prism/prism.css}">-->
+
+    <!--    <script th:src="@{/js/lib/prism/prism.js}"></script>-->
     <script th:src="@{/js/lib/jodit/plugins/paste-code/paste-code.js}"></script>
     <link rel="stylesheet" th:href="@{/js/lib/jodit/jodit.css}">
     <script th:src="@{/js/lib/jodit/jodit.js}"></script>
@@ -85,9 +87,6 @@
     /*加载editor*/
     let editorObj = loadJoditEditor("#editor");
 
-    //手动高亮设置
-    window.Prism = window.Prism || {};
-    window.Prism.manual = true;
 
     /*搜索父标题,并添加*/
     //输入框变化,改变下拉框信息
@@ -218,16 +217,16 @@
     async function checkExistEnName() {
         let oldValue = document.getElementById("oldEnName").value;
         if (oldValue && oldValue === document.getElementById("enName").value) return true;
-        return await checkEnName(1, document.getElementById("enName"), "/article/checkEnName");
+
+        let enName = document.getElementById("enName").value;
+        let params = {"enName": enName, "sid": ""};
+        return await checkEnName(1, document.getElementById("enName"), "/article/checkEnName", params);
     }
 
     document.getElementById("enName").addEventListener("blur", checkExistEnName);
 
 </script>
-<script th:src="@{/js/lib/prism/prism.js}"></script>
-<script>
-    Prism.highlightAll(false);//所有进行完毕,高亮代码
-</script>
+
 </body>
 
 </html>
