--- a/src/main/resources/templates/front-template/article.html
+++ b/src/main/resources/templates/front-template/article.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/css/base.css"/>
     <link rel="stylesheet" href="/css/article.css"/>
     <link rel="stylesheet" href="/css/devices.css"/>
+    <link rel="stylesheet" href="/js/lib/prism/plugins/toolbar/prism-toolbar.css" data-noprefix/>
 
 </head>
 
